<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Params:</string>
    <string name="app_name">PagSeguro Mock</string>
    <string name="action_settings">Settings</string>
    <string name="errorCode">errorCode</string>
    <string name="error">error</string>
    <string name="paymentId">paymentId</string>
    <string name="paymentStatus">paymentStatus</string>
    <string name="reference">reference</string>

</resources>
