<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/errorCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/errorCodeTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/errorCodeEdit" />

            <TextView
                android:text="@string/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/errorTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/errorEdit" />


            <TextView
                android:text="@string/paymentId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/paymentIdTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/paymentIdEdit" />


            <TextView
                android:text="@string/paymentStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/paymentStatusTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/paymentStatusEdit" />

            <TextView
                android:text="@string/reference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/referenceTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/referenceEdit" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="URL retorno"
                android:id="@+id/textView2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/urlRetornoEdit" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Voltar"
                android:id="@+id/voltar"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/hello_world"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hello" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
